--- a/platformio.ini
+++ b/platformio.ini
@@ -18,6 +18,7 @@ framework = arduino
 lib_deps = 
 	TinyGPSPlus
 	NeoPixelBus
+	sparkfun/SparkFun_LSM6DS3_Arduino_Library
 	TheNitek/QMC5883LCompass
 monitor_speed = 115200
 upload_speed = 921600
