--- a/platformio.ini
+++ b/platformio.ini
@@ -16,9 +16,10 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 lib_deps = 
-	TinyGPSPlus
+	1655 ;TinyGPSPlus (name exists twice, so we have to use the ID)
 	NeoPixelBus
 	sparkfun/SparkFun_LSM6DS3_Arduino_Library
 	TheNitek/QMC5883LCompass
+	MFRC522
 monitor_speed = 115200
 upload_speed = 921600
